Formatted folders and add requirements

--- a/F1-macro scores of classes in Donorschoose dataset.ipynb
+++ b/F1-macro scores of classes in Donorschoose dataset.ipynb
@@ -6,33 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_all = 'C:\\\\Users\\\\under\\\\Jupyter Projects\\\\My Research\\\\Donor Charity Matching\\\\data_donorschoose\\\\donorschoose_primary_subject.csv'"
+    "# Initialization cell\n",
+    "path_data = 'path\\\\to\\\\data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import numpy as np\n",
-    "import csv\n",
     "import pandas as pd\n",
-    "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from collections import Counter\n",
-    "import re\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import itertools\n",
-    "import time\n",
-    "from sklearn.metrics import precision_recall_fscore_support as score\n",
-    "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from mlxtend.plotting import plot_confusion_matrix\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from preprocess import clean_corpora\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.svm import LinearSVC"
    ]
   },
   {
@@ -73,7 +67,6 @@
     "df_all = pd.read_csv(path_all)\n",
     "df_all['all_texts'] = df_all['title'] + df_all['short_description'] + df_all['need_statement'] + df_all['essay']\n",
     "df_all = df_all.dropna(subset=['all_texts'])\n",
-    "print(df_all['all_texts'].isnull().sum())\n",
     "df_all.dropna(axis=0, how='all', inplace=True)\n",
     "print(\"Number of rows in data =\", df_all.shape[0])\n",
     "print(\"Number of columns in data =\", df_all.shape[1])\n",
@@ -105,107 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\under\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\under\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Preprocess texts: \n",
-    "# Removing lower text, remove digits, remove stopwords, lemmatize, punctuations\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "import re, string\n",
-    "\n",
-    "def fillEmpty(sentence):\n",
-    "    if not isinstance(sentence, str):\n",
-    "        return 'N/A'\n",
-    "    else:\n",
-    "        return sentence\n",
-    "    \n",
-    "def removePunctuation(sentence):\n",
-    "    return sentence.translate(str.maketrans(' ', ' ',string.punctuation))\n",
-    "\n",
-    "def removeDigit(sentence):\n",
-    "    digit_removed = re.sub(r'\\d+', '', sentence)\n",
-    "    return digit_removed\n",
-    "\n",
-    "nltk.download('stopwords')\n",
-    "def removeStopWords(sentence):\n",
-    "    stop_words = set(stopwords.words('english'))\n",
-    "    return list(filter(lambda x: x not in stop_words, sentence.split()))\n",
-    "\n",
-    "nltk.download('wordnet')\n",
-    "lemmatizer = WordNetLemmatizer()\n",
-    "def lemmatizeDoc(sentence):\n",
-    "    return list(map(lambda x: lemmatizer.lemmatize(x), sentence.split()))    \n",
-    "\n",
-    "def convertWordsToString(word_list):\n",
-    "    sentence = ' '.join(word_list)\n",
-    "    return sentence\n",
-    "\n",
-    "def clean_corpora(doc_list):\n",
-    "    # Fill out missing cells\n",
-    "    doc_list = doc_list.apply(fillEmpty)\n",
-    "    # Lower all texts\n",
-    "    doc_list = doc_list.str.lower()\n",
-    "    # Remove all digits\n",
-    "    doc_list = doc_list.apply(removeDigit)\n",
-    "    # Remove punctuations\n",
-    "    doc_list = doc_list.apply(removePunctuation)\n",
-    "    # Remove Stopwords\n",
-    "    doc_list = doc_list.apply(removeStopWords)\n",
-    "    # Convert splitted words list into sentence\n",
-    "    doc_list = doc_list.apply(convertWordsToString)\n",
-    "    # Lemmatize text\n",
-    "    doc_list = doc_list.apply(lemmatizeDoc)\n",
-    "    # Convert splitted words list into sentence\n",
-    "    doc_list = doc_list.apply(convertWordsToString)\n",
-    "    return doc_list"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "X_texts = clean_corpora(df_2540['all_texts'])\n",
+    "X_texts = clean_corpora(df_2540['all_texts'], \n",
+    "                        isLower=True, \n",
+    "                        doesRemoveDigit=True, \n",
+    "                        doesRemovePunc=True, \n",
+    "                        doesRemoveStopWords=True, \n",
+    "                        doesLemmatize=True)\n",
     "vectorizer = TfidfVectorizer(strip_accents='unicode', analyzer='word', ngram_range=(1,2), norm='l2')\n",
     "X = vectorizer.fit_transform(X_texts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7252774"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(vectorizer.get_feature_names())"
    ]
   },
   {
@@ -229,8 +133,6 @@
    "source": [
     "y = df_2540['grade_level']\n",
     "X_train, X_test, y_train, y_test_g = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "from sklearn.svm import LinearSVC\n",
     "\n",
     "svc = LinearSVC(C=5.0, class_weight=None, dual=True, fit_intercept=True,\n",
     "                intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
@@ -299,7 +201,6 @@
    "source": [
     "y = df_2540['poverty_level']\n",
     "X_train, X_test, y_train, y_test_p = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "from sklearn.svm import LinearSVC\n",
     "\n",
     "svc = LinearSVC(C=5.0, class_weight=None, dual=True, fit_intercept=True,\n",
     "                intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
@@ -327,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -368,7 +271,6 @@
    "source": [
     "y = df_2540['primary_focus_area']\n",
     "X_train, X_test, y_train, y_test_s = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "from sklearn.svm import LinearSVC\n",
     "\n",
     "svc = LinearSVC(C=5.0, class_weight=None, dual=True, fit_intercept=True,\n",
     "                intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
@@ -417,15 +319,6 @@
    ],
    "source": [
     "Counter(y_test_s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {'Applied Learning': 0, 'Health & Sports': 1, 'History & Civics': 2, 'Literacy & Language': 3, 'Math & Science': 4, 'Music & The Arts': 5, 'Special Needs': 6}"
    ]
   }
  ],
