--- a/Plot NFIS with Doroschoose data.ipynb
+++ b/Plot NFIS with Doroschoose data.ipynb
@@ -2,39 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "module_path = os.path.abspath(os.path.join('C:\\\\Users\\\\under\\\\Jupyter Projects\\My Research\\\\Donor Charity Matching\\\\utilities'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "    \n",
-    "path_all = 'C:\\\\Users\\\\under\\\\Jupyter Projects\\\\My Research\\\\Donor Charity Matching\\\\data_donorschoose\\\\donorschoose_primary_subject.csv'"
+    "# Initialization cell\n",
+    "path_data = 'path\\\\to\\\\data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import Normalized_Feature_Indicative_Score as NFIS\n",
-    "import TextPreprocessing as preprocesser\n",
-    "%load_ext autoreload"
+    "import nfis\n",
+    "from preprocess import clean_corpora\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
@@ -63,7 +50,7 @@
    ],
    "source": [
     "# Import CSV data\n",
-    "df_all = pd.read_csv(path_all)\n",
+    "df_all = pd.read_csv(path_data)\n",
     "# Merge all texts into one cell\n",
     "df_all['all_texts'] = df_all['title'] + df_all['short_description'] + df_all['need_statement'] + df_all['essay']\n",
     "# Clean data\n",
@@ -71,7 +58,15 @@
     "print(\"Number of rows in data =\", df_all.shape[0])\n",
     "print(\"Number of columns in data =\", df_all.shape[1])\n",
     "# Keep descriptions contain only between 2500 and 4000 characters\n",
-    "df_2540 = df_all[(2500 <= df_all['all_texts'].apply(len)) & (df_all['all_texts'].apply(len) < 4000)]\n",
+    "df_2540 = df_all[(2500 <= df_all['all_texts'].apply(len)) & (df_all['all_texts'].apply(len) < 4000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Drop empty celss\n",
     "print(df_2540.shape)\n",
     "df_2540 = df_2540.dropna(subset=['grade_level'])\n",
@@ -86,10 +81,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%autoreload 2\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "\n",
-    "X_texts = preprocesser.clean_corpora(df_2540['all_texts'], isLower=True, doesRemoveDigit=True, doesRemovePunc=True, doesRemoveStopWords=True, doesLemmatize=True)\n",
+    "X_texts = clean_corpora(df_2540['all_texts'], \n",
+    "                        isLower=True, \n",
+    "                        doesRemoveDigit=True, \n",
+    "                        doesRemovePunc=True, \n",
+    "                        doesRemoveStopWords=True, \n",
+    "                        doesLemmatize=True)\n",
     "vectorizer = CountVectorizer(strip_accents='unicode', analyzer='word', ngram_range=(1,2), binary=True)\n",
     "X = vectorizer.fit_transform(X_texts)"
    ]
@@ -132,9 +129,8 @@
     }
    ],
    "source": [
-    "%autoreload 2\n",
     "y = df_2540['poverty_level']\n",
-    "NFIS.plotScores(NFIS.getK_NFIS(X=X, y=y, k=100), row=2, col=2, bins=30)"
+    "nfis.plot_scores(nfis.getK_NFIS(X=X, y=y, k=100), row=2, col=2, bins=30)"
    ]
   },
   {
@@ -176,7 +172,7 @@
    ],
    "source": [
     "y = df_2540['grade_level']\n",
-    "NFIS.plotScores(NFIS.getK_NFIS(X=X, y=y, k=100), row=2, col=2, bins=30)"
+    "nfis.plot_scores(nfis.getK_NFIS(X=X, y=y, k=100), row=2, col=2, bins=30)"
    ]
   },
   {
@@ -222,7 +218,7 @@
    ],
    "source": [
     "y = df_2540['primary_focus_area']\n",
-    "NFIS.plotScores(NFIS.getK_NFIS(X=X, y=y, k=100), row=3, col=3, bins=30)"
+    "nfis.plot_scores(nfis.getK_NFIS(X=X, y=y, k=100), row=3, col=3, bins=30)"
    ]
   },
   {
